--- a/user.yml
+++ b/user.yml
@@ -1,7 +1,7 @@
 --- # Personal information
-first: FIRST_NAME
-last: LAST_NAME
-watiam: WATIAM_ID
-student: STUDENT_ID
-email: email
+first: Hyunjae
+last: Park
+watiam: hj8park
+student: 20463482
+email: jay.park@uwaterloo.ca
 ...
